--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@prisma/client": "^5.17.0",
+    "@radix-ui/react-icons": "^1.3.0",
     "framer-motion": "^11.3.2",
     "next": "14.2.5",
     "prisma": "^5.17.0",
